--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Sensors</title>
+    <title>Sentinel-2</title>
     <meta charset="utf-8" />
     <meta name="author" content="Soki Kimura" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -13,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Sensors
+# Sentinel-2
 ]
 .subtitle[
 ## CASA0023 Remote Sensing Cities and Environment<br /> Week 2 Presentation
@@ -34,26 +34,24 @@ class: inverse, center, middle
 
 
 
-# Introduction to Sensors
-
+# Introduction to Sentinel-2
 
 ???
 
 ---
 
-# Two types of sensors 
+# SENTINEL-2
 
-.pull-left[
-## Passive Sensors
-
-- Sensors
-
-]
+Sentinel-2 is a constellation of two satellites in the same orbit, monitoring Earth's surface changes.
 
 
-.pull-right[
-## Active Sensors
-]
+&gt; ### Specifications
+&gt; 
+&gt; - Operation since: 2015 (Sentinel-2A) / 2017 (2B)
+&gt; - Temporal Resolution: 5 days (10 days with one satellite) on equator
+&gt; 
+
+
 
 ---
 
