--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ class: center, middle, inverse, title-slide
 ### UCL Bartlett Centre for Advanced Spatial Analysis
 ]
 .date[
-### 2023/1/16 (updated: 2024-01-23)
+### 2023/1/16 (updated: 2024-01-24)
 ]
 
 ---
@@ -90,8 +90,9 @@ Earth observation satellites from Japan
 - Sensor: PALSAR-2 (Active Radar)
 - Launched as successor to the PALSAR radar in ALOS
 
-&gt; *'Daichi'*: 「**大地**」 &lt;br \&gt;
-&gt; 'Vast land' in Japanese
+&gt; *'Daichi'*: 「**大地**」'land'
+
+Sources: &lt;a name=cite-jaxa2023a&gt;&lt;/a&gt;[JAXA (2023a)](#bib-jaxa2023a), &lt;a name=cite-jaxa2024&gt;&lt;/a&gt;[JAXA (2024)](#bib-jaxa2024), &lt;a name=cite-nasaearthsciencedatasystems2020&gt;&lt;/a&gt;[NASA Earth Science Data Systems (2020)](#bib-nasaearthsciencedatasystems2020)
 
 ]
 
@@ -125,13 +126,15 @@ Earth observation satellites from Japan
 - Planned as successor to ALOS-2
 - Cannot be a substitute for the loss of ALOS-3, due to the difference in bands.
 
+Source: 
+
 ]
 
 ---
 
 # Applications: Disaster observation
 
-Observing of disasters is one of the focus areas by ALOS. [(JAXA, 2011)](https://www.eorc.jaxa.jp/ALOS/en/img_up/dis_opt_tohokueq_110314.htm)
+Observing of disasters is one of the focus areas by ALOS. &lt;a name=cite-jaxa2011&gt;&lt;/a&gt;&lt;a name=cite-jaxa2011a&gt;&lt;/a&gt;([JAXA, 2011b](#bib-jaxa2011); [JAXA, 2011a](#bib-jaxa2011a))
 
 #### Aftermath of the Great East Japan Earthquake (2011)
 
@@ -154,13 +157,11 @@ Deforestation occuring worldwide has been observed, using the Radar image from D
 
 The ALOS projects have contributed to the growth of Japanese earth observation, with observation available for various wavelengths.
 
-Disaster observation is of importance to the Japanese community as a whole. Global observation enables analysis for disasters worldwide, recent example being the [earthquake in Turkey](https://earth.jaxa.jp/en/earthview/2023/02/14/7381/index.html).
+Disaster observation is of importance to the Japanese community as a whole. Global observation enables analysis for disasters worldwide, recent example being the earthquake in Turkey &lt;a name=cite-jaxa2023&gt;&lt;/a&gt;([JAXA, 2023b](#bib-jaxa2023)).
 
 The failure of ALOS-3 may impact the earth observation of Japan, especially with the importance lying in disaster management that happens every once in a while.
 
-&gt; Japan has this past of losing a weather forcast satellite in 2003, forcing them to lend satellite data from the US for a few years. &lt;br \&gt; 
-&gt; 
-&gt; SO BAD we don't learn from mistakes!
+&gt; Japan has this past of losing a weather forcast satellite in 2003, forcing them to lend satellite data from the US for a few years. Hope the next ones will succeed!
 
 ### To Do: Use the data from ALOS!
 
@@ -170,18 +171,33 @@ I personally feel proud my country is using their own satellites for earth obser
 
 # References
 
-ALOSによる災害観測. (no date). Available at: https://www.eorc.jaxa.jp/ALOS/img_up/jdis_opt_tohokueq_110328.htm (Accessed: 23 January 2024).
 
-Dataset | ALOS@EORC. (no date). ALOS@EORC Homepage. Available at: https://www.eorc.jaxa.jp/ALOS/index_e.htm (Accessed: 23 January 2024).
+```
+## Warning: jaxa2024: unknown macro '\textbar'
+```
 
-Earth Science Data Systems, N. (2020). What is Synthetic Aperture Radar? | Earthdata. Earth Science Data Systems, NASA. Available at: https://www.earthdata.nasa.gov/learn/backgrounders/what-is-sar (Accessed: 23 January 2024).
+&lt;a name=bib-jaxa2011&gt;&lt;/a&gt;[JAXA](#cite-jaxa2011) (2011b). _Emergency
+Observation of Magnitude-9.0 Earthquake off the Pacific coast of
+Tohoku-Kanto District in Japan in 2011 by AVNIR-2 onboard "Daichi"
+(ALOS)_.
 
-JAXA Satellite Navigator / Space Technology Directorate I. (no date). Available at: https://www.satnavi.jaxa.jp/en/ (Accessed: 23 January 2024).
+&lt;a name=bib-jaxa2011a&gt;&lt;/a&gt;[JAXA](#cite-jaxa2011a) (2011a).
+_陸域観測技術衛星「だいち」(ALOS)による東日本大震災の緊急観測結果(21)_.
 
-MTSat 1, 1R (Himawari 6). (no date). Gunter’s Space Page. Available at: https://space.skyrocket.de/doc_sdat/mtsat-1.htm (Accessed: 23 January 2024).
+&lt;a name=bib-jaxa2023&gt;&lt;/a&gt;[JAXA](#cite-jaxa2023) (2023b). _ALOS-2
+observations of earthquakes in southeastern Turkey in 2023 (Updated on
+March 2) – JAXA Earth-graphy / Space Technology Directorate I_.
 
-Observing of disaster by ALOS. (no date). Available at: https://www.eorc.jaxa.jp/ALOS/en/img_up/dis_opt_tohokueq_110314.htm (Accessed: 23 January 2024).
+&lt;a name=bib-jaxa2023a&gt;&lt;/a&gt;[JAXA](#cite-jaxa2023a) (2023a). _JAXA
+Satellite Navigator / Space Technology Directorate I_.
 
+&lt;a name=bib-jaxa2024&gt;&lt;/a&gt;[JAXA](#cite-jaxa2024) (2024). _Dataset
+\textbar ALOS@EORC_. En.
+
+&lt;a name=bib-nasaearthsciencedatasystems2020&gt;&lt;/a&gt;[NASA Earth Science
+Data Systems](#cite-nasaearthsciencedatasystems2020) (2020). _What is
+Synthetic Aperture Radar?_ En. Backgrounder Publisher: Earth Science
+Data Systems, NASA.
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
